--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,10 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<!--This is a use of structural directive...Using Angular interpolation-->
-<ul>
-    <li *ngFor="let user of users">{{user.id}} - {{user.userName}}</li>
-</ul>
+<div class="container" style="margin-top: 100px;">
+    <app-home></app-home> 
+</div>
+
 
 <!-- Better to use !!!
 Use Angular's built-in control flow @for-->
 <!--It can track $index-->
-<ul>
-    @for(user of users;track user.id){
-        <li>{{user.id}} - {{user.userName}}</li>
-    }
-</ul>
